==> dong-higenis/stm32g4-dmc-balance/firmware/stm32g4-dmc-balance/App/hw/src/gpio.c <==
#include "gpio.h"
#include "cli.h"


#ifdef _USE_HW_GPIO


#define NAME_DEF(x)  x, #x

typedef enum
{
  GPIO_HW,
} GpioType_t;


typedef struct
{
  GpioType_t    type;
  GPIO_TypeDef *port;
  uint32_t      pin;
  uint8_t       mode;
  GPIO_PinState on_state;
  GPIO_PinState off_state;
  bool          init_value;
  GpioPinName_t pin_name;
  const char   *p_name;
} gpio_tbl_t;


const gpio_tbl_t gpio_tbl[HW_GPIO_MAX_CH] =
{
  {GPIO_HW, SW_GPIO_Port, SW_Pin, _DEF_INPUT_PULLUP, GPIO_PIN_RESET, GPIO_PIN_SET, _DEF_HIGH, NAME_DEF(BTN) },
  {GPIO_HW, R1_GPIO_Port, R1_Pin, _DEF_OUTPUT_PULLUP, GPIO_PIN_RESET, GPIO_PIN_SET, _DEF_HIGH, NAME_DEF(MT_R_IN_1) },
  {GPIO_HW, R2_GPIO_Port, R2_Pin, _DEF_OUTPUT_PULLUP, GPIO_PIN_RESET, GPIO_PIN_SET, _DEF_HIGH, NAME_DEF(MT_R_IN_2) },
  {GPIO_HW, L1_GPIO_Port, L1_Pin, _DEF_OUTPUT_PULLUP, GPIO_PIN_RESET, GPIO_PIN_SET, _DEF_HIGH, NAME_DEF(MT_L_IN_1) },
  {GPIO_HW, L2_GPIO_Port, L2_Pin, _DEF_OUTPUT_PULLUP, GPIO_PIN_RESET, GPIO_PIN_SET, _DEF_HIGH, NAME_DEF(MT_L_IN_2) },

  {GPIO_HW, R_ENC1_GPIO_Port, R_ENC1_Pin, _DEF_INPUT_PULLUP, GPIO_PIN_SET, GPIO_PIN_RESET, _DEF_LOW, NAME_DEF(R_ENC1) },
  {GPIO_HW, R_ENC2_GPIO_Port, R_ENC2_Pin, _DEF_INPUT_PULLUP, GPIO_PIN_SET, GPIO_PIN_RESET, _DEF_LOW, NAME_DEF(R_ENC2) },
  {GPIO_HW, L_ENC1_GPIO_Port, L_ENC1_Pin, _DEF_INPUT_PULLUP, GPIO_PIN_SET, GPIO_PIN_RESET, _DEF_LOW, NAME_DEF(L_ENC1) },
  {GPIO_HW, L_ENC2_GPIO_Port, L_ENC2_Pin, _DEF_INPUT_PULLUP, GPIO_PIN_SET, GPIO_PIN_RESET, _DEF_LOW, NAME_DEF(L_ENC2) },

  {GPIO_HW, SPI3_CS_GPIO_Port, SPI3_CS_Pin, _DEF_OUTPUT_PULLUP, GPIO_PIN_RESET, GPIO_PIN_SET, _DEF_HIGH, NAME_DEF(SPI_CS) },
};


#ifdef _USE_HW_CLI
static void cliGpio(cli_args_t *args);
#endif

bool gpioPinMode(uint8_t ch, uint8_t mode);


bool gpioInit(void)
{
  bool ret = true;

  for (int i = 0; i < HW_GPIO_MAX_CH; i++)
  {
    gpioPinMode(i, gpio_tbl[i].mode);
  }


#ifdef _USE_HW_CLI
  cliAdd("gpio", cliGpio);
#endif

  return ret;
}

bool gpioPinMode(uint8_t ch, uint8_t mode)
{
  bool ret = true;
  GPIO_InitTypeDef GPIO_InitStruct = {0};


  if (ch >= HW_GPIO_MAX_CH)
  {
    return false;
  }

  switch(mode)
  {
    case _DEF_INPUT:
      GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
      GPIO_InitStruct.Pull = GPIO_NOPULL;
      break;

    case _DEF_INPUT_PULLUP:
      GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
      GPIO_InitStruct.Pull = GPIO_PULLUP;
      break;

    case _DEF_INPUT_PULLDOWN:
      GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
      GPIO_InitStruct.Pull = GPIO_PULLDOWN;
      break;

    case _DEF_OUTPUT:
      GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
      GPIO_InitStruct.Pull = GPIO_NOPULL;
      break;

    case _DEF_OUTPUT_PULLUP:
      GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
      GPIO_InitStruct.Pull = GPIO_PULLUP;
      break;

    case _DEF_OUTPUT_PULLDOWN:
      GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
      GPIO_InitStruct.Pull = GPIO_PULLDOWN;
      break;
  }

  GPIO_InitStruct.Pin = gpio_tbl[ch].pin;
  HAL_GPIO_Init(gpio_tbl[ch].port, &GPIO_InitStruct);

  return ret;
}

void gpioPinWrite(int8_t ch, bool value)
{
  if (ch >= HW_GPIO_MAX_CH)
  {
    return;
  }

  if (value)
  {
    HAL_GPIO_WritePin(gpio_tbl[ch].port, gpio_tbl[ch].pin, gpio_tbl[ch].on_state);
  }
  else
  {
    HAL_GPIO_WritePin(gpio_tbl[ch].port, gpio_tbl[ch].pin, gpio_tbl[ch].off_state);
  }
}

bool gpioPinRead(uint8_t ch)
{
  bool ret = false;

  if (ch >= HW_GPIO_MAX_CH)
  {
    return false;
  }

  if (HAL_GPIO_ReadPin(gpio_tbl[ch].port, gpio_tbl[ch].pin) == gpio_tbl[ch].on_state)
  {
    ret = true;
  }

  return ret;
}

void gpioPinToggle(uint8_t ch)
{
  if (ch >= HW_GPIO_MAX_CH)
  {
    return;
  }

  HAL_GPIO_TogglePin(gpio_tbl[ch].port, gpio_tbl[ch].pin);
}


#ifdef _USE_HW_CLI
void cliGpio(cli_args_t *args)
{
  bool ret = false;


  if (args->argc == 1 && args->isStr(0, "info") == true)
  {
    for (int i=0; i<HW_GPIO_MAX_CH; i++)
    {
      cliPrintf("%d %-16s - %d\n", i, gpio_tbl[i].p_name, gpioPinRead(i));
    }
    ret = true;
  }

  if (args->argc == 1 && args->isStr(0, "show") == true)
  {
    while(cliKeepLoop())
    {
      for (int i=0; i<HW_GPIO_MAX_CH; i++)
      {
        cliPrintf("%d", gpioPinRead(i));
      }
      cliPrintf("\n");
      delay(100);
    }
    ret = true;
  }

  if (args->argc == 2 && args->isStr(0, "read") == true)
  {
    uint8_t ch;

    ch = (uint8_t)args->getData(1);

    cliPrintf("gpio read %d : %d\n", ch, gpioPinRead(ch));

    ret = true;
  }

  if (args->argc == 3 && args->isStr(0, "write") == true)
  {
    uint8_t ch;
    uint8_t data;

    ch   = (uint8_t)args->getData(1);
    data = (uint8_t)args->getData(2);

    gpioPinWrite(ch, data);

    cliPrintf("gpio write %d : %d\n", ch, data);
    ret = true;
  }

  if (ret != true)
  {
    cliPrintf("gpio info\n");
    cliPrintf("gpio show\n");
    cliPrintf("gpio read ch[0~%d]\n", HW_GPIO_MAX_CH-1);
    cliPrintf("gpio write ch[0~%d] 0:1\n", HW_GPIO_MAX_CH-1);
  }
}
#endif


#endif
